--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,34 @@
    margin: 0;
    padding: 0;
 }
+
 .promo {
    height: 800px;
    background: url("../img/bg/main_bg.jpg") center center/cover no-repeat;
    padding: 38px 0 62px 0;
 }
+
 .container {
    width: 1140px;
    margin: 0 auto;
 }
+
 .logo .logo_img {
    display: block;
    margin: 0 auto;
 }
+
 .logo .logo_text {
    color: #ffffff;
    font-family: "Roboto";
-   line-height: 24px;
    font-weight: 500;
    font-size: 15px;
    text-transform: uppercase;
    text-align: center;
    margin-top: 14px;
+}
+h1 {
+   margin-top: 53px;
 }
 
 .title {
@@ -32,7 +38,37 @@
    color: #f9bf3b;
    font-weight: 400;
    font-size: 41px;
-   line-height: 24px;
+
    text-transform: uppercase;
    text-align: center;
+}
+
+h2.title {
+   margin-top: 30px;
+}
+
+.simple .title_big {
+   font-family: "Roboto - Black";
+   color: #ffffff;
+   font-weight: 400;
+   font-size: 80px;
+   text-transform: uppercase;
+   text-align: center;
+   margin-top: 21px;
+}
+
+.promo .promo_text {
+   color: #ffffff;
+   font-size: 21px;
+   font-weight: 300;
+   line-height: 28px;
+   font-family: "Roboto Light";
+   font-weight: 300;
+   text-align: center;
+}
+
+.promo .promo_text span {
+   color: #f9bf3b;
+   font-family: "Roboto - Bold";
+   font-weight: 700;
 }
