--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,15 @@
    padding: 0;
 }
 
-.promo {
-   height: 800px;
-   background: url("../img/bg/main_bg.jpg") center center/cover no-repeat;
-   padding: 38px 0 62px 0;
-}
-
 .container {
    width: 1140px;
    margin: 0 auto;
+}
+
+.promo {
+   height: 850px;
+   background: url("../img/bg/main_bg.jpg") center center/cover no-repeat;
+   padding: 38px 0 62px 0;
 }
 
 .logo .logo_img {
@@ -58,6 +58,8 @@ h2.title {
 }
 
 .promo .promo_text {
+   padding: 0 13px;
+   margin-top: 23px;
    color: #ffffff;
    font-size: 21px;
    font-weight: 300;
@@ -71,4 +73,41 @@ h2.title {
    color: #f9bf3b;
    font-family: "Roboto - Bold";
    font-weight: 700;
+}
+.promo .promo_btn {
+   display: block;
+   border-radius: 12px;
+   margin: 73px auto;
+   width: 313px;
+   height: 72px;
+   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+   border: 4px solid rgba(0, 0, 0, 0.23);
+   background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+   font-family: "Roboto Condensed";
+   font-size: 21px;
+   font-weight: 400;
+   color: #ffffff;
+   text-transform: uppercase;
+   text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
+   outline: none;
+   cursor: pointer;
+}
+
+.more {
+   margin-top: 73px;
+}
+
+.more .more_text {
+   color: #ffffff;
+   font-family: "Roboto - Thin";
+   font-size: 15px;
+   font-weight: 400;
+   text-transform: uppercase;
+   text-align: center;
+}
+
+.more .more_img {
+   display: block;
+   margin: 4px auto 61px;
+   /* margin-top: 13px; */
 }
