--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ h2.title {
    margin-top: 18px;
 }
 
-.waiting .witing_subheader {
+.waiting .waiting_subheader {
+   margin-top: 18px;
    color: #4a4a4a;
    font-family: Roboto;
    font-size: 23px;
@@ -144,8 +145,25 @@ h2.title {
 }
 
 .waiting .waiting_wrapper {
+   justify-content: space-between;
+   display: flex;
    margin-top: 45px;
 }
 
 .waiting .waiting_wrapper .waiting_item {
+   text-align: center;
+   width: 339px;
+}
+
+.waiting .waiting_wrapper .waiting_item .waiting_img{
+   width: 100%;
+}
+.waiting .waiting_wrapper .waiting_item .waiting_descr{
+   margin-top: 33px;
+   color: #4A4A4A;
+   font-family: Roboto;
+   font-style: normal;
+   font-weight: 300;
+   font-size: 15px;
+   line-height: 21px;
 }
