--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-   * {
+* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
 }
 
 .container {
+   position: relative;
    width: 1140px;
    margin: 0 auto;
 }
@@ -118,7 +119,8 @@ h2.title {
    padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header {
+.waiting .waiting_header,
+.finish .finish_header {
    color: #252525;
    font-family: Roboto;
    font-size: 30px;
@@ -127,7 +129,12 @@ h2.title {
    text-align: center;
 }
 
-.waiting .waiting_divider {
+.finish .finish_header {
+   color: #efefef;
+}
+
+.waiting .waiting_divider,
+.finish .finish_divider {
    width: 217px;
    height: 4px;
    background-color: #f9bf3b;
@@ -145,8 +152,8 @@ h2.title {
 }
 
 .waiting .waiting_wrapper {
-   justify-content: space-between;
    display: flex;
+   justify-content: space-between;
    margin-top: 45px;
 }
 
@@ -155,15 +162,57 @@ h2.title {
    width: 339px;
 }
 
-.waiting .waiting_wrapper .waiting_item .waiting_img{
+.waiting .waiting_wrapper .waiting_item .waiting_img {
    width: 100%;
 }
-.waiting .waiting_wrapper .waiting_item .waiting_descr{
+.waiting .waiting_wrapper .waiting_item .waiting_descr {
    margin-top: 33px;
-   color: #4A4A4A;
+   color: #4a4a4a;
    font-family: Roboto;
    font-style: normal;
    font-weight: 300;
    font-size: 15px;
    line-height: 21px;
+}
+
+.optimization {
+   min-height: 550px;
+   padding: 102px 0 107px 0;
+}
+
+.optimization .optimization_header {
+   margin-left: 391px;
+   color: #299cbd;
+   font-family: "Roboto - Black";
+   font-size: 30px;
+   font-weight: 400;
+   text-transform: uppercase;
+}
+
+.optimization .optimization_text {
+   margin-top: 25px;
+   margin-left: 391px;
+   color: #4a4a4a;
+   font-family: "Roboto Light";
+   font-size: 17px;
+   font-weight: 300;
+   line-height: 27px;
+}
+
+.optimization .optimization_text span {
+   font-family: "Roboto - Bold";
+   font-weight: 700;
+}
+
+.optimization .optimization_img {
+   position: absolute;
+   top: 48px;
+   left: -240px;
+   z-index: -1;
+}
+
+.finish {
+   min-height: 447px;
+   padding: 86px 0 79px 0;
+   background: url("../img/bg/second_bg.jpg") center center/cover no-repeat;
 }
