--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
    margin: 0;
    padding: 0;
 }
-
+html {
+   font-family: "Roboto", sans-serif;
+}
 .container {
    position: relative;
    width: 1140px;
@@ -23,8 +25,7 @@
 
 .logo .logo_text {
    color: #ffffff;
-   font-family: "Roboto";
-   font-weight: 500;
+   font-weight: 400;
    font-size: 15px;
    text-transform: uppercase;
    text-align: center;
@@ -35,9 +36,8 @@ h1 {
 }
 
 .title {
-   font-family: "Roboto - Black";
    color: #f9bf3b;
-   font-weight: 400;
+   font-weight: 900;
    font-size: 41px;
 
    text-transform: uppercase;
@@ -49,9 +49,8 @@ h2.title {
 }
 
 .simple .title_big {
-   font-family: "Roboto - Black";
    color: #ffffff;
-   font-weight: 400;
+   font-weight: 900;
    font-size: 80px;
    text-transform: uppercase;
    text-align: center;
@@ -65,14 +64,11 @@ h2.title {
    font-size: 21px;
    font-weight: 300;
    line-height: 28px;
-   font-family: "Roboto Light";
-   font-weight: 300;
    text-align: center;
 }
 
 .promo .promo_text span {
    color: #f9bf3b;
-   font-family: "Roboto - Bold";
    font-weight: 700;
 }
 .promo .promo_btn,
@@ -85,9 +81,8 @@ h2.title {
    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
    border: 4px solid rgba(0, 0, 0, 0.23);
    background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
-   font-family: "Roboto Condensed";
    font-size: 21px;
-   font-weight: 400;
+   font-weight: 300;
    color: #ffffff;
    text-transform: uppercase;
    text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
@@ -101,7 +96,6 @@ h2.title {
 
 .more .more_text {
    color: #ffffff;
-   font-family: "Roboto - Thin";
    font-size: 15px;
    font-weight: 400;
    text-transform: uppercase;
@@ -123,7 +117,6 @@ h2.title {
 .waiting .waiting_header,
 .finish .finish_header {
    color: #252525;
-   font-family: Roboto;
    font-size: 30px;
    font-weight: 400;
    text-transform: uppercase;
@@ -146,7 +139,6 @@ h2.title {
 .waiting .waiting_subheader {
    margin-top: 18px;
    color: #4a4a4a;
-   font-family: Roboto;
    font-size: 23px;
    font-weight: 400;
    text-align: center;
@@ -169,8 +161,6 @@ h2.title {
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
    margin-top: 33px;
    color: #4a4a4a;
-   font-family: Roboto;
-   font-style: normal;
    font-weight: 300;
    font-size: 15px;
    line-height: 21px;
@@ -184,9 +174,8 @@ h2.title {
 .optimization .optimization_header {
    margin-left: 391px;
    color: #299cbd;
-   font-family: "Roboto - Black";
    font-size: 30px;
-   font-weight: 400;
+   font-weight: 900;
    text-transform: uppercase;
 }
 
@@ -194,14 +183,12 @@ h2.title {
    margin-top: 25px;
    margin-left: 391px;
    color: #4a4a4a;
-   font-family: "Roboto Light";
    font-size: 17px;
    font-weight: 300;
    line-height: 27px;
 }
 
 .optimization .optimization_text span {
-   font-family: "Roboto - Bold";
    font-weight: 700;
 }
 
@@ -243,10 +230,9 @@ h2.title {
    margin-top: 25px;
    text-align: center;
    color: #efefef;
-   font-weight: 300;
+   font-weight: 100;
    font-size: 17px;
    line-height: 20px;
-   font-family: Roboto;
 }
 
 .gift {
@@ -262,8 +248,8 @@ h2.title {
 
 .gift .gift_header {
    margin-top: 45px;
-   font-family: Roboto;
    font-size: 30px;
+   font-weight: 400;
    line-height: 43px;
    color: #252525;
    text-align: center;
@@ -281,27 +267,27 @@ h2.title {
 
 .first_webinar .first_webinar_header {
    margin-top: 36px;
-   font-family: Roboto;
    font-size: 30px;
    color: #252525;
    text-align: center;
+   font-weight: 500;
+   text-transform: uppercase;
 }
 
 .first_webinar .first_webinar_datum {
    margin-top: 30px;
-   font-family: Roboto;
    font-weight: 900;
    font-size: 36px;
    color: #299cbd;
    text-align: center;
+   text-transform: uppercase;
 }
 
 .first_webinar .first_webinar_push {
    margin-top: 24px;
    margin-bottom: 50px;
-   font-family: Roboto;
    font-size: 23px;
-   font-weight: normal;
+   font-weight: 400;
    color: #4a4a4a;
    text-align: center;
 }
@@ -316,7 +302,6 @@ footer {
    width: 377px;
    text-align: center;
    color: #888888;
-   font-family: Roboto;
    font-size: 15px;
    font-weight: 300;
    line-height: 21px;
@@ -324,7 +309,6 @@ footer {
 
 footer a {
    color: #888888;
-   font-family: Roboto;
    font-size: 15px;
    font-weight: 300;
    line-height: 21px;
